feat: Refactor Activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.LoginScreen"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.login.LoginView"
+            android:name=".presentation.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LoginScreen">
@@ -25,14 +25,14 @@
         </activity>
 
         <activity
-            android:name=".presentation.login.SignUpView"
+            android:name=".presentation.login.SignUpActivity"
             android:exported="true"
             android:label="@string/SignUp"
             android:theme="@style/Theme.LoginScreen">
         </activity>
 
         <activity
-            android:name=".presentation.login.PasswordView"
+            android:name=".presentation.login.PasswordActivity"
             android:exported="true"
             android:label="@string/passView"
             android:theme="@style/Theme.LoginScreen">
